<resources>
    <string name="app_name">Test</string>
    <string name="poetry">诗词</string>
    <string name="my">我的</string>
    <string name="showImage">图片显示</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_today">今日荐诗</string>
    <string name="slant_bar">/</string>
    <string name="title">古诗题目</string>
    <string name="dynasty">朝代</string>
    <string name="author">作者</string>
    <string name="first">第一句</string>
    <string name="chinese_image">国风背景图</string>
    <string name="tips">请输入关键词</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="no_idea">没有想法？</string>
    <string name="text">正文</string>
    <string name="annotation">注释</string>
    <string name="translation">译文</string>
    <string name="appreciation">赏析</string>
    <string name="background_image">background_image</string>
    <string name="my_background">我的背景图片</string>
    <string name="user_name">user_name</string>
    <string name="gender">gender</string>
    <string name="fans">粉丝：</string>
    <string name="follow">关注：</string>
    <string name="function_bar_image">function_bar_image</string>
    <string name="gollum">请输入咕噜号</string>
    <string name="password">请输入密码</string>
    <string name="register">注册新用户</string>
    <string name="retrieve_password">找回密码</string>
    <string name="gulu_poetry">咕噜诗词</string>
    <string name="cancel">取消</string>
    <string name="release">发布</string>
    <string name="add_user">添加或注册账号</string>
    <string name="sentence">佳句</string>
    <string name="recommended_sentence">佳句推荐</string>
    <string name="author_poetry"><![CDATA[查看该作者的所有诗集>>]]></string>
    <string name="tip_author">请输入你要搜索的作者</string>
</resources>