<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
    app:cardBackgroundColor="#FAFAFA"
    app:cardCornerRadius="5dp"
    app:cardElevation="1dp">

    <TextView
        android:id="@+id/title_poetry_with_first_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/dynasty_poetry_with_first_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/dynasty"
            android:textColor="#D1AE54"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slant_bar"
            android:textColor="#D1AE54" />

        <TextView
            android:id="@+id/author_poetry_with_first_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author"
            android:textColor="#D1AE54"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/first_poetry_with_first_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/first"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="110dp"
        android:background="#D3D3D3" />
</com.google.android.material.card.MaterialCardView>

