<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PoetryDetailsActivity">

    <com.example.test.custom.MyActionBar
        android:id="@+id/action_bar_poetry_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frame_poetry_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/text_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/text"
                android:textColor="@drawable/rb_text" />

            <RadioButton
                android:id="@+id/translation_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/translation"
                android:textColor="@drawable/rb_text" />

            <RadioButton
                android:id="@+id/annotation_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/annotation"
                android:textColor="@drawable/rb_text" />

            <RadioButton
                android:id="@+id/appreciation_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/appreciation"
                android:textColor="@drawable/rb_text" />

            <RadioButton
                android:id="@+id/headset_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center_horizontal"
                android:text="@string/audio"
                android:textColor="@drawable/rb_text" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>