<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/poetry_rb_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F5F5F5"
            android:button="@null"
            android:drawableTop="@drawable/poetry_drawable"
            android:gravity="center"
            android:text="@string/poetry"
            android:textColor="@drawable/rb_text"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/sentence_rb_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F5F5F5"
            android:button="@null"
            android:drawableTop="@drawable/sentence_drawable"
            android:gravity="center"
            android:text="@string/sentence"
            android:textColor="@drawable/rb_text"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/mine_rb_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F5F5F5"
            android:button="@null"
            android:drawableTop="@drawable/my_drawable"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@drawable/rb_text"
            android:textSize="12sp" />
    </RadioGroup>

</LinearLayout>