<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.example.gulupoetry.custom.MyActionBar
            android:id="@+id/action_other_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/background_image_other_user"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:alpha="0.4"
                android:contentDescription="@string/my_background"
                android:scaleType="fitXY"
                android:src="@drawable/guofeng" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/head_portrait_other_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="155dp"
                android:src="@drawable/logo_poetry_white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="115dp"
                android:layout_marginTop="185dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/user_name_other_user"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/user_name" />

                        <ImageView
                            android:id="@+id/gender_other_user"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/gender"
                            android:src="@drawable/man" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/fans"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/fans_other_user"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"
                            android:background="#D3D3D3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/follow"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/follow_other_user"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ToggleButton
                        android:id="@+id/follow_toggle_activity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="5dp"
                        android:button="@null"
                        android:textOff=""
                        android:textOn="" />

                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.gulupoetry.custom.MyFunctionBar
                android:id="@+id/collection_other_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

